# choptop

./: .gitignore  LICENSE  README.md  choptop.py  example.py
choptop-arduino/HX711SerialBegin/: HX711SerialBegin.ino
choptop-arduino/libraries/HX711/examples/HX711SerialBegin/: HX711SerialBegin.ino
choptop-backend/: choptop.py  hx711.py  plotter.py  sensor.py  sensor_controller.py
choptop-backend-2/: .gitignore  CMakeLists.txt  README.md  gb_common.c  hx711.c  hx711.cpp  hx711.h  ws_client.html
choptop-backend-2/cppWebSockets/: CMakeLists.txt  Util.cpp  Util.h  WebSocketServer.cpp  WebSocketServer.h
choptop-backend-2/rs232/: README.md
choptop-backend-2/sensor_reader/: SensorReader.cpp  SensorReader.h  rs232-linux.c
choptop-backend-2/server/: ChoptopServer.cpp  ChoptopServer.h  ChoptopServerWrapper.cpp  ChoptopServerWrapper.h
choptop-backend-2/src/: ChopDetector.cpp  ChopDetector.hpp  DataProcessor.cpp  DataProcessor.h  LoadCellReader.cpp  LoadCellReader.h  LoadCellsProcessor.cpp  LoadCellsProcessor.h  PositionProcessor.cpp  PositionProcessor.h  WeightProcessor.cpp  WeightProcessor.h  hx711.cpp  hx711.h  hx711_gpio.cpp  hx711_mock.cpp  hx711_serial.cpp  main.cpp  model_properties  server_test.cpp  test_serial.cpp  test_server.cpp
choptop-backend-2/ws_server/: WebsocketServer.cpp  WebsocketServer.h
choptop-interface/: README.md  index.html  package-lock.json  package.json  test-server.js  test-server.py
choptop-interface/src/: App.vue  main.js  recipes.json
choptop-interface/src/components/: AnimatedInteger.vue  ChopInstructions.vue  NavButton.vue  PortionSelector.vue  Recipe.vue  RecipeListing.vue  RecipeOverview.vue  SimpleWeightDisplay.vue  StepDisplay.vue  TapPosition.vue  Timer.vue  WeightDisplay.vue  WelcomeToChopTop.vue  tapPosition.vue  template.vue
choptop-interface/static/: globalStyles.css
tools/: chop_detection.py  dummy.txt  dummy2.txt  formatted_data.txt  labelled_data.txt  log_weights.py
